--- a/css/index.css
+++ b/css/index.css
@@ -231,7 +231,51 @@ section.section50 ul {
 	margin-top: 10px;
 }
 
-@media screen and (min-width: 300px) and (max-width: 600px) {
+@media screen and (max-width: 800px) and (min-width: 501px) {
+    body {
+		margin: auto;
+		width: 95%;
+    }
+
+    header {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column-reverse;
+        margin: auto;
+        background-color: white;
+    }
+    
+    nav {
+		display: flex;
+		justify-content: space-between;
+        max-width: 100%;
+        flex-wrap: nowrap;
+    }
+    
+    nav a {
+        color:grey;
+        text-decoration: none;
+        padding: 20px 0;
+        text-align: center;
+    }
+
+    .title-and-image {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		padding: 40px 0;
+    } 
+    
+    .title-and-image div img {
+        display: none;
+    }
+
+}
+
+
+@media screen and (max-width: 500px) {
 	
 	body {
 		margin: auto;
@@ -243,9 +287,8 @@ section.section50 ul {
 		display: flex;
 		justify-content: space-between;
 		flex-direction: column-reverse;
-		background-color: rgb(241, 241, 241);
-		margin: auto;
-		/* border-radius: 10px; */
+        margin: auto;
+        background-color: white;
 	}
 
 	nav {
@@ -254,8 +297,7 @@ section.section50 ul {
 		width: 100%;
 	}
 
-	nav a {
-		color:grey;
+	nav a {		
 		text-decoration: none;
 		padding: 20px;
 		text-align: center;
@@ -265,51 +307,19 @@ section.section50 ul {
 
 	nav a:first-child {
 		border-top: 1px solid grey;
-	}
-
-	.logo {
-		align-self: center;
-		margin: 10px 0;
-	}
-
-	.services-header-img {
-		max-width: 100%;
-	}
-
+    }
+    
 	.title-and-image {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		width: 100%;
 		padding: 40px 0;
-	} 
-
-	.title {
-		width: 100%;
-		text-align: center;
-	}
-
-	div.title h1 {
-		font-size: 500%;
-	}
-
-	section.section100 h1 {
-		font-size: 30px;
-	}
-
-	.get-started {
-		border: 1px solid black;
-		padding: 10px;
-		width: 200px;
-		margin: auto;
-	}
-
-	.hero-section {
-		display: flex;
-		flex-direction: column;
-		border-top: 1px solid black;
-		border-bottom: 1px solid black;
-	}
+    } 
+    
+    .title-and-image div img {
+        display: none;
+    }
 
 	.hero-one {
 		display: flex;
@@ -317,85 +327,14 @@ section.section50 ul {
 		align-items: center;
 	}
 
-	.wide-img img {
-		width: 100%;
-	}
-
-	.section100 {
-		width: 100%;
-		padding: 40px 0;
-	}
-
 	.section50 {
 		width: 100%;
 		padding: 40px 0;
 	}
 
-	.section48{
-		border: 1px solid black;
-		background-color: rgb(241, 241, 241);
-		width: 100%;
-		padding: 20px;
-		margin: 20px 0;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-evenly;
-	}
-
-	.services-offer {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: space-between;
-		align-content: space-around;
-		padding: 20px 0;
-		border-top: 1px solid black;
-		border-bottom: 2px solid black;
-	}
-
 	.section33 {
-		width: 33%;
+		width: 100%;
 		padding: 40px 0;
 	}
 
-	footer {
-		padding: 40px 0;
-	}
-
-	.phone-number {
-		padding: 15px 0;
-	}
-
-	.footer-copyright {
-		text-align: center;
-		padding: 40px 0;
-		font-family: 'Staatliches', sans-serif;
-	}
-
-	.services-info-img {
-		padding: 0;
-		align-self: center;
-		max-width: 100%;
-	}
-
-	section.section50 ul {
-		padding: 20px 0;
-		line-height: 2;
-		list-style-type: square;
-		margin-left: 1em;
-	}
-
-	.learn-more-style {
-		border: 1px solid black;
-		border-radius: 5px;
-		background-color: white;
-		padding: 10px;
-		width: 150px;
-		font-size: 15px;
-		text-align: center;
-		margin-top: 10px;
-	}
-
-	* {
-		color: red;
-	}
 }
