--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5 {
 
 body {
 	margin: 0 auto;
-	width: 1024px;
+	width: 80%;
 }
 
 header {
@@ -77,13 +77,12 @@ nav {
 	display: flex;
 	justify-content: space-evenly;
 	width: 100%;
-	flex-wrap: wrap;
 }
 
 nav a {
 	color:grey;
 	text-decoration: none;
-	padding: 1.5em;
+	padding: 20px 0;
 	text-align: center;
 }
 
@@ -184,7 +183,6 @@ section.section100 h1 {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;	
-	/* align-content: space-around; */
 	padding: 20px 0;
 	border-top: 1px solid black;
 	border-bottom: 2px solid black;
@@ -250,7 +248,6 @@ section.section50 ul {
 		display: flex;
 		justify-content: space-between;
         max-width: 100%;
-        flex-wrap: nowrap;
     }
     
     nav a {
@@ -285,15 +282,14 @@ section.section50 ul {
 	header {
 		width: 100%;
 		display: flex;
-		justify-content: space-between;
 		flex-direction: column-reverse;
         margin: auto;
         background-color: white;
 	}
 
 	nav {
-		display: flex;
-		justify-content: space-evenly;
+        display: flex;
+        flex-direction: column;
 		width: 100%;
 	}
 
@@ -313,10 +309,14 @@ section.section50 ul {
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		width: 100%;
-		padding: 40px 0;
+		max-width: 100%;
+        padding: 40px 0;
     } 
     
+    div.title h1 {
+        font-size: 15vw;
+    }
+
     .title-and-image div img {
         display: none;
     }
