--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul {
+ol, ul { 
 	list-style: none;
 }
 blockquote, q {
@@ -61,33 +61,31 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 body {
-	margin: 0 auto;
-	width: 80%;
+	margin: 2rem auto;
+    width: 65%;
 }
 
 header {
+    
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	background-color: rgb(241, 241, 241);
-	border-radius: 5px;
 }
 
 nav {
 	display: flex;
-	justify-content: space-evenly;
-	width: 100%;
+	justify-content: space-between;
+    width: 70%;
 }
 
 nav a {
 	color:grey;
 	text-decoration: none;
-	padding: 20px 0;
-	text-align: center;
+    align-self: center;
 }
 
 .logo {
-	align-self: center;
+    align-self: center;
 }
 
 nav a:hover {
@@ -109,44 +107,36 @@ nav a:hover {
 	}
 }
 
-.services-header-img {
-	margin: 5px 0;
-	width: 100%;
-}
-
 .title-and-image {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	padding: 40px 0;
+	padding: 4.5rem 0;
 } 
 
 .title {
 	width: 100%;
-	text-align: center;
+    text-align: center;
+    padding-left: 3rem;    
 }
 
 div.title h1 {
-	font-size: 500%;
-}
-
-section.section100 h1 {
-	font-size: 30px;
+    font-size: 4.5rem;
 }
 
 .get-started {
-	border: 1px solid black;
-	padding: 10px;
-	width: 200px;
-	margin: auto;
+    border: 1px solid black;
+	padding: 0.5rem 0;
+	width: 10rem;
+	margin: 2rem auto 0;
 }
 
 .hero-section {
 	display: flex;
 	flex-direction: column;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
 }
 
 .hero-one {
@@ -158,80 +148,33 @@ section.section100 h1 {
 	width: 100%;
 }
 
-.section100 {
-	width: 100%;
-	padding: 40px 0;
-}
-
 .section50 {
 	width: 50%;
-	padding: 40px 0;
-}
-
-.section48{
-	border: 1px solid black;
-	background-color: rgb(241, 241, 241);
-	width: 48%;
-	padding: 20px;
-	margin: 20px 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-}
-
-.services-offer {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;	
-	padding: 20px 0;
-	border-top: 1px solid black;
-	border-bottom: 2px solid black;
+	padding: 2rem 0;
 }
 
 .section33 {
 	width: 33%;
-	padding: 40px 0;
+	padding: 2.5rem 0;
 }
 
 footer {
-	padding: 40px 0;
+	padding: 2.5rem 0;
 }
 
 .phone-number {
-	padding: 15px 0;
+    line-height: 3rem
 }
 
 .footer-copyright {
 	text-align: center;
-	padding: 40px 0;
-	font-family: 'Staatliches', sans-serif;
-}
-
-.services-info-img {
-	padding: 40px 0;
-}
-
-section.section50 ul {
-	padding: 20px 0;
-	line-height: 2;
-	list-style-type: square;
-	margin-left: 1em;
-}
-
-.learn-more-style {
-	border: 1px solid black;
-	border-radius: 5px;
-	background-color: white;
-	padding: 10px;
-	width: 150px;
-	font-size: 15px;
-	text-align: center;
-	margin-top: 10px;
+	padding: 2rem 0;
+	/* font-family: 'Staatliches', sans-serif; */
 }
 
 @media screen and (max-width: 800px) and (min-width: 501px) {
     body {
-		margin: auto;
+		margin: 2rem auto;
 		width: 95%;
     }
 
@@ -246,14 +189,15 @@ section.section50 ul {
     
     nav {
 		display: flex;
-		justify-content: space-between;
+        justify-content: space-between;
+        width: 100%;
         max-width: 100%;
     }
     
     nav a {
         color:grey;
         text-decoration: none;
-        padding: 20px 0;
+        padding: 2rem 0;
         text-align: center;
     }
 
@@ -262,7 +206,7 @@ section.section50 ul {
 		justify-content: center;
 		align-items: center;
 		width: 100%;
-		padding: 40px 0;
+		padding: 3rem 0;
     } 
     
     .title-and-image div img {
@@ -271,11 +215,10 @@ section.section50 ul {
 
 }
 
-
 @media screen and (max-width: 500px) {
 	
 	body {
-		margin: auto;
+		margin: 1.5rem auto;
 		width: 95%;
 	}
 
@@ -295,7 +238,7 @@ section.section50 ul {
 
 	nav a {		
 		text-decoration: none;
-		padding: 20px;
+		padding: 1.5rem;
 		text-align: center;
 		width: 100%;
 		border-bottom: 1px solid grey;
@@ -310,7 +253,7 @@ section.section50 ul {
 		justify-content: center;
 		align-items: center;
 		max-width: 100%;
-        padding: 40px 0;
+        padding: 3rem 0;
     } 
     
     div.title h1 {
@@ -337,4 +280,62 @@ section.section50 ul {
 		padding: 40px 0;
 	}
 
+}
+
+/* services.html styles */
+
+.services-header-img {
+	margin: 5px 0;
+	width: 100%;
+}
+
+section.section100 h1 {
+	font-size: 30px;
+}
+
+.section100 {
+	width: 100%;
+	padding: 40px 0;
+}
+
+.section48{
+	border: 1px solid black;
+	background-color: rgb(241, 241, 241);
+	width: 48%;
+	padding: 20px;
+	margin: 20px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+.services-offer {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;	
+	padding: 20px 0;
+	border-top: 1px solid black;
+	border-bottom: 2px solid black;
+}
+
+.services-info-img {
+	padding: 40px 0;
+}
+
+section.section50 ul {
+	padding: 20px 0;
+	line-height: 2;
+	list-style-type: square;
+	margin-left: 1em;
+}
+
+.learn-more-style {
+	border: 1px solid black;
+	border-radius: 5px;
+	background-color: white;
+	padding: 10px;
+	width: 150px;
+	font-size: 15px;
+	text-align: center;
+	margin-top: 10px;
 }
