--- a/mobile-first/mobile-style.css
+++ b/mobile-first/mobile-style.css
@@ -180,7 +180,7 @@ footer {
 	font-family: 'Staatliches', sans-serif;
 }
 
-@media screen and (max-width: 800px) and (min-width: 501px) {
+@media screen and (min-width: 501px) {
     body {
 		margin: auto;
 		width: 95%;
@@ -224,7 +224,11 @@ footer {
 		align-items: center;
 		width: 100%;
 		padding: 40px 0;
-    } 
+    }
+
+    div.title h1 {
+        font-size: 9vw;
+    }
     
     .title-and-image div img {
         display: none;
@@ -254,6 +258,7 @@ footer {
     }
     
     header {
+        width: 100%;
         max-width: 100%;
         display: flex;
         flex-direction: row;
@@ -266,17 +271,15 @@ footer {
         flex-direction: row;
         justify-content: space-evenly;
         max-width: 100%;
+        align-items: center;
     }
     
     nav a {		
         text-decoration: none;
-        padding: 20px;
         text-align: center;
         width: 100%;
         color: grey;
         padding: 0;
-        margin-top: 30px;
-        align-items: center;
         border: none;
     }
 
@@ -307,13 +310,6 @@ footer {
     .title-and-image div h1 {
         font-size: 500%;
     }
-    
-
-    /* .title {
-        width: 100%;
-        text-align: center;
-    } */
-    
 
     .hero-one {
         display: flex;
